# nvidia-resiliency-ext

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AUTO_RESTART_DESIGN.md  AUTO_RESTART_DIAGRAMS.md  AUTO_RESTART_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.builder  Dockerfile.ci  Makefile  README.md  build.py  clean.py  cupti_build.py  extended_gpu_health_check.py  ft_api.html  ft_usage.html  genindex.html  index.html  install.sh  nvrx_build.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  straggler_api.html  straggler_usage.html
.claude/: settings.json
.claude/commands/: nvrx-create.md  nvrx-quickstart.md  nvrx-run.md  nvrx-submit.md  nvrx-validate.md  nvrx-watch.md  nvrx.md
.claude/skills/nvrx/: SKILL.md
.claude/skills/nvrx-create/: SKILL.md
.claude/skills/nvrx-quickstart/: SKILL.md
.claude/skills/nvrx-run/: SKILL.md
.claude/skills/nvrx-submit/: SKILL.md
.claude/skills/nvrx-validate/: SKILL.md
.claude/skills/nvrx-watch/: SKILL.md
.github/workflows/: build_docs.yml  cherry_pick_release.yml  gitlab-ci.yml  lint_code.yml  unit_test.yml  update-pr-status.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/fault_tolerance/: api.rst.txt  examples.rst.txt  index.rst.txt  usage_guide.rst.txt
_sources/inprocess/: examples.rst.txt  usage_guide.rst.txt
_sources/straggler_det/: index.rst.txt
attribution/: index.html
attribution/features/: index.html  progressive-ft-launcher-attribution.html  requirements-template.html
checkpointing/async/: api.html  examples.html  index.html  usage_guide.html
checkpointing/local/: api.html  examples.html  index.html  usage_guide.html
docs/source/: conf.py  index.rst  release-notes.md
examples/attribution/: README.md  build_enroot_image.sh  nvrx_attrsvc.py  pyproject.toml  requirements.txt  restart_agent.json  single_server_example.py
examples/checkpointing/: async_ckpt.py  async_writer.py  local_ckpt.py
examples/fault_tolerance/: basic_ft_example.py  dist_utils.py  fault_tol_cfg_heartbeats.yaml  fault_tol_cfg_sections.yaml  in_job_and_in_process_example.py  log_utils.py  run_inprocess_injob_example.sh  train_ddp.py  train_ddp_heartbeats_api.py  train_ddp_sections_api.py
examples/healthcheck/: hc_test_1.py
examples/inprocess/: advanced_example.py  basic_example.py  optimal_example.py  t2i_accelerate_example.py  t2i_lora_accelerate_example.py  t2i_lora_example.py
examples/straggler/: cupti_example.py  example-save2file.py  example.py
examples/utils/: node_health_check_example.py
fault_tolerance/: api.html  examples.html  index.html  integration.html  usage_guide.html
fault_tolerance/api/: callback.html  client.html  config.html  server.html
fault_tolerance/examples/: basic_example.html  in_job_and_in_process_example.html  train_ddp.html  train_ddp_heartbeats.html  train_ddp_sections.html
fault_tolerance/integration/: heartbeats.html  inprocess.html  ptl.html  sections.html
inprocess/: api.html  examples.html  index.html  usage_guide.html
inprocess/api/: abort.html  compose.html  exception.html  finalize.html  health_check.html  initialize.html  rank_assignment.html  rank_filter.html  state.html  wrap.html
inprocess/examples/: basic_example.html  optimal_example.html
public/: .buildinfo  ft_api.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  straggler_usage.html
public/.doctrees/: environment.pickle  ft_api.doctree  ft_usage.doctree  index.doctree  straggler_api.doctree  straggler_usage.doctree
public/_sources/: ft_api.rst.txt  ft_usage.rst.txt  index.rst.txt  straggler_api.rst.txt  straggler_usage.rst.txt
release_notes/: RELEASE_NOTES_v0.5.0.md
services/: README.md  pyproject.toml
services/attrsvc/: ATTRSVC_SPEC.md  README.md
services/attrsvc/deploy/: Dockerfile  kubernetes.yaml  nvrx-attrsvc.service  slurm.sbatch  snapshot_attrsvc.sh
services/nodestate_tunnel_proxy/: Dockerfile  README.md  entrypoint.sh  nginx.conf  sshd_config
services/nodestatesvc/: Dockerfile  README.md
services/nvrx_attrsvc/: ATTRSVC_SPEC.md  NVRX_ATTRSVC_SPEC.md  README.md  __init__.py  app.py  config.py  dataflow.py  routes.py  service.py
services/nvrx_attrsvc/deploy/: Dockerfile  kubernetes.yaml  nvrx-attrsvc.service  run_attrsvc.sh  slurm.sbatch
services/nvrx_smonsvc/: README.md  __init__.py  __main__.py  attrsvc_client.py  job_handlers.py  models.py  monitor.py  slurm.py  stats.py  status_server.py
services/nvrx_smonsvc/deploy/: nvrx-smonsvc.service  run_smonsvc.sh  slurm.sbatch  snapshot_smonsvc.sh
services/scripts/: README.md  build_enroot_image.sh  common.sh  nvrx_services.sbatch  run_services.sh  setup_systemd.sh  snapshot_services.sh
services/smonsvc/: README.md
services/smonsvc/deploy/: slurm.sbatch
services/tests/: test_attrsvc_config.py  test_nodestatesvc_main.py  test_nodestatesvc_server.py  test_nodestatesvc_slurm.py  test_smonsvc_attrsvc_client.py  test_smonsvc_job_handlers.py  test_smonsvc_slurm.py  test_smonsvc_status_server.py
shared_utils/: api.html  config_reference.html  index.html  logger_guide.html
src/nvidia_resiliency_ext/: __init__.py  device_utils.py
straggler_det/: api.html  examples.html  index.html  usage_guide.html
straggler_det/api/: callback.html  reporting.html  statistics.html  straggler.html
straggler_det/examples/: basic_example.html
tests/inprocess/: __init__.py  app.py  common.py  test_abort.py  test_app.py  test_auto_restart.py  test_compose.py  test_hang_protection_disabler.py  test_health_check.py  test_monitor_thread.py  test_nested_restarter.py  test_progress_watchdog.py  test_rank_assignment.py  test_timeout.py  test_torch.py  test_wrap.py
tests/shared_utils/: test_auto_restart.py  test_grpc_log_leaf_server.py  test_grpc_log_server.py  test_health_check.py  test_job_metadata.py  test_logger.py
tests/straggler/: README.md
tools/fault_tolerance/: cycle_info_reader.py  parse_restart_metrics.py
tools/restart_agent_eval/: .gitignore  README.md  eval_logs  restart_agent.env.example
(+813 files in other folders)
