[build-system]
requires = [ "poetry-core>=1.0.0", "pybind11", "setuptools", "wheel",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nvidia-resiliency-ext"
repository = "https://github.com/NVIDIA/nvidia-resiliency-ext"
version = "0.5.0-rc1"
description = "NVIDIA Resiliency Package"
authors = [ "NVIDIA Corporation",]
readme = "README.md"
license = "Apache 2.0"
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Operating System :: OS Independent",]
exclude = [ "src/nvidia_resiliency_ext/attribution/straggler/cupti_src",]
[[tool.poetry.packages]]
include = "nvidia_resiliency_ext"
from = "src"

[tool.isort]
profile = "black"
line_length = 100
py_version = 310
filter_files = true
extend_skip_glob = [ "setup.py", "cupti_build.py",]

[tool.black]
line_length = 100
skip_string_normalization = true
required_version = "24"
target-version = [ "py310", "py311", "py312",]
force-exclude = "# Force exclude, as this config is also used by pre-commit\n# https://stackoverflow.com/questions/73247204/black-not-respecting-extend-exclude-in-pyproject-toml\n# A regex preceded with ^/ will apply only to files and directories # in the root of the project.\n(\n  ^\\/setup.py\\/\n  | ^\\/build.py\\/\n)\n"

[tool.ruff]
extend-exclude = [ "setup.py", "build.py",]

[tool.poetry.build]
script = "cupti_build.py"
generate-setup-file = true

[tool.poetry.dependencies]
torch = ">=2.3.0"
packaging = "*"
python = ">=3.10"
psutil = ">=6.0.0"
pyyaml = "*"
pynvml = ">=12.0.0"
nvidia-ml-py = ">=12.570.86"
defusedxml = "*"

[tool.poetry.scripts]
ft_launcher = "nvidia_resiliency_ext.fault_tolerance.launcher:main"

[tool.ruff.lint]
ignore = [ "F841",]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "F401",]
