# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvrx-attrsvc"
version = "0.2.0"
description = "NVRX Attribution Service - Log analysis with LLM attribution"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "NVIDIA Corporation"}
]
keywords = [
    "nvidia",
    "resiliency",
    "attribution",
    "log-analysis",
    "slurm",
    "kubernetes",
    "distributed-training",
    "fault-attribution",
    "llm",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    # Core library
    "nvidia-resiliency-ext>=0.5.0",

    # Web framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "slowapi>=0.1.9",

    # LLM and MCP
    "langchain-nvidia-ai-endpoints>=0.3.15",
    "mcp>=1.15.0",
    "logsage>=0.1.5",
    "slack-bolt>=1.23.0",
    "slack-sdk>=3.35.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",

    # Code quality
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",

    # Type stubs
    "types-requests",
]

dataflow = [
    "nvdataflow",
    "numpy<2.0",
]

all = [
    "nvrx-attrsvc[dev,dataflow]",
]

[project.scripts]
nvrx-attrsvc = "nvrx_attrsvc.app:main"
nvrx-smonsvc = "nvrx_smonsvc.__main__:main"

[project.urls]
Homepage = "https://github.com/NVIDIA/nvidia-resiliency-ext"
Repository = "https://github.com/NVIDIA/nvidia-resiliency-ext"
Issues = "https://github.com/NVIDIA/nvidia-resiliency-ext/issues"
Documentation = "https://github.com/NVIDIA/nvidia-resiliency-ext/tree/main/services"

[tool.setuptools]
packages = ["nvrx_attrsvc", "nvrx_smonsvc"]

# ──────────────────────────────────────────────────────────────
# DEVELOPMENT TOOLS CONFIGURATION
# ──────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=nvrx_attrsvc",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (with mocked LLM)",
    "e2e: End-to-end tests (real LLM, slow, optional)",
]

[tool.coverage.run]
source = ["nvrx_attrsvc"]
omit = [
    "tests/*",
    "nvrx_attrsvc/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
py_version = 311
# Match root: treat library as first party so import order matches `isort .` from repo root
known_first_party = ["nvidia_resiliency_ext"]
filter_files = true
extend_skip_glob = [
    "*_pb2.py",
    "*_pb2_grpc.py",
    "*_pb2.pyi",
]

[tool.black]
line-length = 100
skip_string_normalization = true
required_version = "24"
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    # "I" - isort rules disabled; use `poetry run isort .` instead
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports (re-exports)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "nvdataflow.*",
    "logsage.*",
    "mcp.*",
]
ignore_missing_imports = true
